# Sparganothis-v2

./: .gitignore  .gitmodules  AGENTS.md  CODEMAP.md  CSS_INLINE_SWITCH.md  CSS_SWITCH.md  Cargo.toml  EDIT_BROWESR_STEPS.md  PICO_COLOR_THEMES.md  TODO.md  build_web_release.sh  fmt.sh  install.sh  latest_bot_diff.md  migrate_clickhouse.sh  readme.md  rustfmt.toml  sql_RESET_EVERYTHING.sh  sql_migrate_add.sh  sql_prepare.sh  start_cli.sh  start_desktop.sh  start_docker.sh  start_server.sh  start_terminal.sh  start_web.sh  test.sh  web_release.sh
.cargo/: config.toml
.github/: release_template.md
.sqlx/: query-00a01f2e1fa18d1136518efbc26bed5c3c2c0086109b8d72c0f25af0815903d7.json  query-23dfd0d5c059ea4ad36e42bcbc1fcb22ee72fed603461123d1c94bd5d2b5ea15.json  query-364d1d931947ca00400671e5886f0443a604c36fb298aeb021ce0b2184abb488.json  query-4089cb819c877c34682e801e9306b763dc55a37ddadb77998eaae5145eac2dbb.json  query-48132a96dfca1c8732a8ed56cc830ce6760f95be94d3352b0fbf719266c3dbfe.json  query-4ceb19254ab602a427c8a13ddab0b1b200f5ca7f5006655ddd75c926f8d25f05.json  query-58894a994500b036bb34ed39f7f2e210040e150354cb466b1dd53c0512947477.json  query-6e1c374b504cf01037d5773b8d88ddb6c4b512280ac9873098cf84f65f8b7b64.json  query-7828aa76a8bf41de94f41d24754a81d01bf656ba0d59db4d1ace1873a446e5fb.json  query-a4b8565c61c7c875a43de31bc2b6bf6305cbb1635623c879f91b41169eb903e8.json  query-a5c17350cb46f34d90ae9f0a32e331a8cc4f0021cf23c12b2ada5e645ede40df.json  query-a9146e74e48597250e55fc32642b0a69a92ea9c4f4c78df8e0f6a60068812372.json  query-c3e73ec6c867eb8782b8fc8a860c30d453bb81a729bea0b5fd904a029fb40b2f.json  (+8 more)
_docker/: clickhouse_log_disable.xml  docker-compose.yml  (+2 more)
client/: Cargo.toml  Dioxus.toml
client/assets/: github.svg.html  main.css
client/src/: app.rs  constants.rs  lib.rs  localstorage.rs  logger.rs  main.rs  network.rs  route.rs  storage_demo.rs
client/src/comp/: bot_player.rs  chat_comp.rs  chat_mini.rs  controls_button_form.rs  cosmetic.rs  game_display.rs  icon.rs  input.rs  mod.rs  modal.rs  nav.rs  settings_form.rs  slider.rs  user_info_display.rs
client/src/comp/chat/: chat_display.rs  chat_input.rs  chat_signals_hook.rs  chat_traits.rs  chat_window_fullscreen.rs  chat_window_mini.rs  global_chat.rs  mod.rs  private_lobby_chat.rs
client/src/comp/controls_button_form/: button_settings.rs  buttons_form.rs  mod.rs
client/src/comp/multiplayer/: _1v1.rs  matchmaking.rs  mod.rs
client/src/comp/singleplayer/: mod.rs
client/src/comp/users/: current_user_info_display.rs  mod.rs  top_players_tables.rs  user_profile_display.rs
client/src/pages/: button_settings.rs  chat.rs  homepage.rs  i_am_a_robot_singleplayer.rs  main_settings.rs  mod.rs  my_profile.rs  singleplayer.rs  spectate_game.rs
client/src/pages/play_game/: _1v1.rs  _1v1_outcome.rs  matchmaking.rs  mod.rs  private_1v1_lobby.rs  private_lobby.rs
client/src/pages/replay/: mod.rs
client/src/pages/users/: mod.rs
client_inventory_test/: Cargo.toml  Dioxus.toml
client_inventory_test/src/: main.rs
client_terminal/: Cargo.toml
client_terminal/src/: lib.rs  main.rs
client_terminal/src/terminal_ui/: app_state.rs  draw.rs  main_loop.rs  mod.rs  router.rs
client_terminal/src/terminal_ui/draw/: loading_screen.rs  mod.rs
client_terminal/src/terminal_ui/draw/chat/: history.rs  mod.rs  presence.rs
client_terminal/src/terminal_ui/pages/: mod.rs
client_terminal/src/terminal_ui/pages/chat/: mod.rs
client_terminal/src/terminal_ui/pages/chat/draw/: history.rs  mod.rs  presence.rs
client_terminal/src/terminal_ui/pages/singleplayer/: mod.rs
game/: Cargo.toml  rust-toolchain.toml
game/src/: git_version.rs  lib.rs  timestamp.rs
game/src/api/: game_match.rs  game_replay.rs  mod.rs  table_paginate.rs  user.rs  user_settings.rs  websocket.rs
game/src/bot/: mod.rs  random_choice_bot.rs  wordpress_blog_bot.rs
game/src/input/: callback_manager.rs  events.rs  input_manager.rs  mod.rs
game/src/rule_manager/: mod.rs
game/src/settings/: mod.rs
game/src/state_manager/: mod.rs
game/src/tet/: game_state.rs  matrix.rs  mod.rs  random.rs  rot.rs  tet.rs  tetpcs.rs
game_net/: Cargo.toml
game_net/src/: _1v1.rs  lib.rs
protocol/: Cargo.toml
protocol/src/: _bootstrap_keys.rs  _const.rs  _random_word.rs  chat.rs  chat_presence.rs  chat_ticket.rs  echo.rs  global_chat.rs  global_matchmaker.rs  iroh-relay.txt  lib.rs  main_node.rs  server_chat.rs  signed_message.rs  sleep.rs  user_identity.rs
protocol/src/_matchbox_signal/: direct_message.rs  ice_servers.rs  mod.rs  open_socket.rs  peer_tracker.rs  room_controller.rs  signaller.rs
protocol/src/api/: api_const.rs  api_method_macros.rs  client_api_manager.rs  join_chat.rs
protocol/src/chat/: chat_const.rs  chat_controller.rs  chat_presence.rs  direct_message.rs  global_chat.rs  mod.rs  room_raw.rs
protocol/src/game_matchmaker/: mod.rs
protocol/src/server_chat/: client_api.rs  mod.rs  server_chat.rs
protocol/src/server_chat_api/: api_const.rs  api_declarations.rs  api_method_macros.rs  api_methods.rs  client_api_manager.rs  join_chat.rs  mod.rs  server_info.rs
server/: Cargo.toml  build.rs
server/migrations/: 000-init.sql  0001_init.sql
server/src/: inventory_impl_list.rs  lib.rs
server/src/server/: elo.rs  main_loop.rs  mod.rs  multiplayer_matchmaker.rs
server/src/server/db/: clickhouse_client.rs  get_replay_match_list2.rs  get_user_profiles.rs  guest_login.rs  mod.rs  send_new_gamestate.rs  send_new_match.rs  user_friends.rs
server/src/server/db2/: get_replay_match_list2.rs  get_user_profiles.rs  guest_login.rs  mod.rs  send_new_gamestate.rs  send_new_match.rs  user_friends.rs
server/src/server/db_old_crackhouse/: clickhouse_client.rs  get_replay_match_list2.rs  get_user_profiles.rs  guest_login.rs  mod.rs  send_new_gamestate.rs  send_new_match.rs  user_friends.rs
server/src/server/multiplayer/: mod.rs
server/src/server/multiplayer/matchmaker/: matchmaker_api.rs  matchmaker_basic.rs  mod.rs  redis_matchmaker_basic.rs
server/src/server/redis/: lock.rs  mod.rs
server/src/terminal_ui/: app_state.rs  draw.rs  main_loop.rs  mod.rs
(+9 files in other folders)
