[workspace]
members = ['client', "game"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2021"

[profile.dev]
opt-level = 1
debug = false

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.dev.build-override]
opt-level = 3
codegen-units = 16
debug = false # when possible

[profile.release]
opt-level = "z"
lto = "fat"
debug = 0
strip = true
codegen-units = 1

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
debug = false

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
