[workspace]
members = ['client', "game", "protocol", "server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2021"

[workspace.dependencies]
uuid = { version = "1.5.0", features = ["v4", "serde", "js"] }
getrandom = { version = "0.3.1", features = ["wasm_js"] }
rand  = {version="0.9.0"}
iroh = { version = "0.33.0", default-features = false }
iroh-base = {version = "0.33.0", default-features = false}
iroh-gossip = {version = "0.33.0", default-features = false}
[profile.dev]
opt-level = 1
debug = false

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.dev.build-override]
opt-level = 3
codegen-units = 16
debug = false # when possible

[profile.release]
opt-level = "z"
lto = "fat"
debug = 0
strip = true
codegen-units = 1

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
debug = false

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
