[workspace]
members = [
    'client', "client_terminal", "game", "protocol", "server", "client_terminal", "game_net",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2021"

[workspace.dependencies]
uuid = { version = "1.5.0", features = ["v4", "serde", "js"] }
getrandom = { version = "0.3.1", features = ["wasm_js"] }
rand  = {version="0.9.0"}
async-trait = "0.1.88"

# iroh = {path = "lib/iroh/iroh", default-features = false}
# iroh-base = {path = "lib/iroh/iroh-base", default-features = false}
# iroh-gossip = {path = "lib/iroh-gossip", default-features = false}
# iroh-net-report = {path = "lib/iroh/iroh-net-report", default-features = false}
iroh = {version = "0.34.0", default-features = false}
iroh-base = {version = "0.34.0", default-features = false}
iroh-gossip = {version = "0.34.1", default-features = false}
iroh-net-report = {version = "0.34.0", default-features = false}

[workspace.lints.rust]
missing_debug_implementations = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(iroh_docsrs)", "cfg(iroh_loom)"] }

[workspace.lints.clippy]
unused-async = "warn"



[profile.dev]
opt-level = 1
debug = false

[profile.desktop-dev]
opt-level = 1
debug = true
inherits = "dev"

[profile.desktop-dev.package."*"]
opt-level = 3
debug = true

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.dev.build-override]
opt-level = 3
codegen-units = 16
debug = false # when possible

[profile.release]
opt-level = "z"
lto = "fat"
debug = 0
strip = true
codegen-units = 1

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
debug = false

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
