[package]
name = "client_inventory_test"
version = "0.1.0"
authors = ["Your Name <cosmin.posirca@yahoo.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
protocol = { path = "../protocol"}
game = { path = "../game"}
inventory = "0.3"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
