[package]
name = "client_terminal"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["derive"] }
iroh = { workspace = true, default-features = false }
n0-future = "0.1.2"
rand = "0.8"
protocol = { version = "0.1.0", path = "../protocol" }
tokio = { version = "1.43.0", features = ["rt", "macros", "sync"] }
tracing-subscriber = "0.3.19"
async-channel = "2.3.1"
tokio-stream = { version = "0.1.17", default-features = false, features = ["sync"] }
tracing = "0.1.41"
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
color-eyre = "0.6.3"
# pallete = "1.1.0"
# palette = "0.7.6"
line_drawing = "1"
# strum = {version = "0.27.1", features = ["derive"]}
# game = { path = "../game" }
tui-big-text = "0.7.1"
async-trait = "0.1.88"

[lints]
workspace = true
