[package]
name = "game"
version = "0.1.37"
edition = "2021"

# [profile.dev]
# opt-level = 1
# [profile.test]
# opt-level = 1
# [profile.dev.package."*"]
# opt-level = 3

[dependencies]
serde_with = "3.8"
# log = "0.4"
tracing = "0.1.41"
hex = "0.4"
# simple_logger = "4.0"
serde = { version = "1", features = ["derive"] }
# serde_json = {version="1"}
bincode = "1.3.3"
chrono = {version="0.4.38", features=["serde", "wasmbind"] }
time = {version="0.3.36", features=["serde"]}
# seahash = "4"
getrandom = { workspace = true }
tokio = { version = "1.43.0", default-features = false, features = ["sync"] }
# tokio-stream = { version = "0.1.17", default-features = false, features = ["sync"] }



# thiserror = "1.0"
anyhow = "1.0.86"
rand = { workspace = true }
async-trait.workspace = true
rand_chacha = "0.9.0"
uuid = { workspace = true }

wasm-bindgen-test = "0.3"

bitfield-struct = "0.8.0"
once_cell = {version="1.18"}
strum_macros = "0.27.1"
strum = "0.27.1"
futures-core = "0.3.31"
async-stream = "0.3.6"
futures-channel = "0.3.31"
futures-util = "0.3.31"
n0-future = "0.1.2"
# endian-num = "0.1.1"

[dev-dependencies]
# pretty_assertions = "1.4.0"