[package]
name = "game_net"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
game = {path = "../game"}
protocol = {path = "../protocol"}
anyhow = "1"
serde = "1"
async-stream = "0.3.6"
tracing = "0.1.41"
async-trait.workspace = true

[lints]
workspace = true
